--- a/app.css
+++ b/app.css
@@ -1,5 +1,8 @@
 body {
     background-color: #f1ece6;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: black;
+    text-decoration: none;
 }
 
 .topbar {
@@ -7,4 +10,12 @@ body {
     height: 100px;
     background-color: #352d29;
     display: flex;
+    align-items: center;
+}
+
+.topbar-text {
+    margin-left: 20px;
+    font-size: 64px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
 }
