--- a/app.css
+++ b/app.css
@@ -19,3 +19,9 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
 }
+
+.text {
+    color: black;
+    text-decoration: none;
+    text-align: center;
+}
