--- a/app.css
+++ b/app.css
@@ -7,7 +7,7 @@ body {
 
 .topbar {
     width: 100%;
-    height: 100px;
+    height: 130px;
     background-color: #352d29;
     display: flex;
     align-items: center;
@@ -20,8 +20,24 @@ body {
     color: white;
 }
 
-.text {
+.table {
+    width: 100%;
+    height: 300px;
+    padding-top: 100px;
+}
+
+.table-text {
     color: black;
     text-decoration: none;
     text-align: center;
+}
+
+.table-column {
+    text-align: center;
+    vertical-align: bottom;
+}
+
+.table-images {
+    text-align: center;
+    vertical-align: top;
 }
