--- a/app.css
+++ b/app.css
@@ -32,6 +32,12 @@ body {
     text-align: center;
 }
 
+.table-text:hover {
+    color: black;
+    text-decoration: underline;
+    text-align: center;
+}
+
 .table-column {
     text-align: center;
     vertical-align: bottom;
@@ -40,4 +46,11 @@ body {
 .table-images {
     text-align: center;
     vertical-align: top;
+}
+
+.start-info {
+    padding-left: 500px;
+    padding-right: 500px;
+    padding-top: 50px;
+    text-align: center;
 }
