--- a/app.css
+++ b/app.css
@@ -7,7 +7,7 @@ body {
 
 .topbar {
     width: 100%;
-    height: 130px;
+    height: 15vh;
     background-color: #352d29;
     display: flex;
     align-items: center;
@@ -22,8 +22,6 @@ body {
 
 .table {
     width: 100%;
-    height: 300px;
-    padding-top: 100px;
 }
 
 .table-text {
@@ -40,24 +38,25 @@ body {
 
 .table-column {
     width: 25%;
+    height: 20vh;
     text-align: center;
     vertical-align: bottom;
 }
 
 .table-images {
+    height: 35vh;
     text-align: center;
     vertical-align: top;
 }
 
 .start-info1 {
-    padding-left: 500px;
-    padding-right: 500px;
-    padding-top: 50px;
+    padding-left: 30vw;
+    padding-right: 30vw;
     text-align: center;
 }
 
 .start-info2 {
-    padding-left: 500px;
-    padding-right: 500px;
+    padding-left: 30vw;
+    padding-right: 30vw;
     text-align: center;
 }
