Im doing something different

--- a/merch.css
+++ b/merch.css
@@ -12,33 +12,12 @@ body {
     grid-template-columns: repeat(3, 1fr);
     gap: 2vw;
     width: 80vw;
-    align-self: center;
     margin: 0 auto;
 }
 
 .cell {
-    width: 100%;
-    height: auto;
-    background: white;
     display: flex;
-    justify-content: center;
     align-items: center;
-}
-
-.cell-image-row {
-    height: 100%;
-    width: 90%;
-    display: grid;
-    position: relative;
-    overflow: hidden;
-}
-
-.slide {
-    grid-area: 1 / 1;
-    height: auto;
-    opacity: 1;
-}
-
-.active {
-    opacity: 1;
+    justify-content: space-between;
+    background: white;
 }
