--- a/app.css
+++ b/app.css
@@ -7,14 +7,14 @@ body {
 
 .topbar {
     width: 100%;
-    height: 15vh;
+    height: 15%;
     background-color: #352d29;
     display: flex;
     align-items: center;
 }
 
 .topbar-text {
-    margin-left: 20px;
+    margin-left: 2%;
     font-size: 64px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
@@ -25,6 +25,7 @@ body {
 }
 
 .table-text {
+    font-size: 2vw;
     color: black;
     text-decoration: none;
     text-align: center;
@@ -37,14 +38,15 @@ body {
 }
 
 .table-column {
-    width: 25%;
-    height: 20vh;
+    width: 25vw;
+    height: 17vh;
     text-align: center;
     vertical-align: bottom;
 }
 
 .table-images {
-    height: 35vh;
+    width: 25vw;
+    height: 20vh;
     text-align: center;
     vertical-align: top;
 }
