--- a/members.css
+++ b/members.css
@@ -8,13 +8,13 @@ body {
 .members-text {
     color: black;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 2vh;
 }
 
 .members-text:hover {
     color: black;
     text-decoration: underline;
-    font-size: 24px;
+    font-size: 2vh;
 }
 
 .table-image-column {
