--- a/members.css
+++ b/members.css
@@ -18,7 +18,7 @@ body {
 }
 
 .table-image-column {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     display: grid;
     position: relative;
@@ -27,15 +27,14 @@ body {
 }
 
 .table-description {
-    width: 55%;
-    height: 100%;
+    width: 55vw;
+    height: 100vh;
     text-align: left;
     vertical-align: middle;
 }
 
 .slide {
     grid-area: 1 / 1;
-    height: auto;
     opacity: 0;
 }
 
@@ -44,13 +43,15 @@ body {
 }
 
 .prev {
-    width: 5%;
-    height: 100%;
+    width: 5vw;
+    height: 100vh;
     text-align: right;
+    vertical-align: middle;
 }
 
 .next {
-    width: 5%;
-    height: 100%;
+    width: 5vw;
+    height: 100vh;
     text-align: left;
+    vertical-align: middle;
 }
