--- a/app.css
+++ b/app.css
@@ -25,7 +25,7 @@ body {
 }
 
 .table-text {
-    font-size: 2vw;
+    font-size: 2vh;
     color: black;
     text-decoration: none;
     text-align: center;
