--- a/merch.css
+++ b/merch.css
@@ -8,6 +8,8 @@ body {
 }
 
 .grid {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2vw;
