--- a/canvas.css
+++ b/canvas.css
@@ -1,3 +1,10 @@
+body {
+    background-color: white;
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+
 .main-container {
     height: 100vh;
     display: flex;
@@ -7,8 +14,26 @@
 }
 
 canvas {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: white;
     border: 1px black solid;
     cursor: crosshair;
+}
+
+.controls {
+    position: absolute;
+    padding-top: 10px;
+    top: 10;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    z-index: 10;
 }
 
 .color button {
