--- a/canvas.css
+++ b/canvas.css
@@ -21,8 +21,21 @@ canvas {
     width: 100vw;
     height: 100vh;
     background-color: white;
-    border: 1px black solid;
     cursor: crosshair;
+}
+
+.no-draw {
+    width: 30vw;
+    height: 30vh;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    pointer-events: none;
+    position: absolute;
+    border: 1px black solid;
+    background-color: white;
+    vertical-align: middle;
+    z-index: 5;
 }
 
 .controls {
