--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #f1ece6;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -6,22 +12,15 @@ body {
 }
 
 .topbar {
-    width: 100%;
-    height: 15%;
+    width: 100vw;
+    height: 18vh;
     background-color: #352d29;
     display: flex;
     align-items: center;
 }
 
-.topbar-text {
-    margin-left: 2%;
-    font-size: 64px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: white;
-}
-
 .table {
-    width: 100%;
+    width: 100vw;
 }
 
 .table-text {
@@ -47,6 +46,7 @@ body {
 .table-images {
     width: 25vw;
     text-align: center;
+    padding-top: 1vh;
     vertical-align: top;
 }
 
