--- a/members.css
+++ b/members.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #f1ece6;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -31,6 +37,10 @@ body {
     height: 100vh;
     text-align: left;
     vertical-align: middle;
+}
+
+.text {
+    padding-bottom: 2vh;
 }
 
 .slide {
