--- a/song.css
+++ b/song.css
@@ -1,8 +1,18 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #f1ece6;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: black;
     text-decoration: none;
+}
+
+.translate-buttons {
+    padding-bottom: 2vh;
 }
 
 .piano {
