--- a/canvas.css
+++ b/canvas.css
@@ -11,6 +11,14 @@ body {
     overflow: hidden;
 }
 
+.topbar {
+    width: 100vw;
+    height: 18vh;
+    background-color: #352d29;
+    display: flex;
+    align-items: center;
+}
+
 .main-container {
     height: 100vh;
     display: flex;
@@ -22,10 +30,10 @@ body {
 canvas {
     position: absolute;
     display: block;
-    top: 0;
+    top: 18vh;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 82vh;
     background-color: white;
     cursor: crosshair;
 }
