--- a/discography.css
+++ b/discography.css
@@ -11,6 +11,14 @@ body {
     text-decoration: none;
 }
 
+.topbar {
+    width: 100vw;
+    height: 18vh;
+    background-color: #352d29;
+    display: flex;
+    align-items: center;
+}
+
 .text {
     padding: 1vh;
 }
