--- a/members.css
+++ b/members.css
@@ -11,6 +11,14 @@ body {
     text-decoration: none;
 }
 
+.topbar {
+    width: 100vw;
+    height: 18vh;
+    background-color: #352d29;
+    display: flex;
+    align-items: center;
+}
+
 .members-text {
     color: black;
     text-decoration: none;
@@ -24,7 +32,7 @@ body {
 }
 
 .table-image-column {
-    height: 100vh;
+    height: 82vh;
     width: 100%;
     display: grid;
     position: relative;
@@ -34,7 +42,7 @@ body {
 
 .table-description {
     width: 55vw;
-    height: 100vh;
+    height: 82vh;
     text-align: left;
     vertical-align: middle;
 }
@@ -54,14 +62,14 @@ body {
 
 .prev {
     width: 5vw;
-    height: 100vh;
+    height: 82vh;
     text-align: right;
     vertical-align: middle;
 }
 
 .next {
     width: 5vw;
-    height: 100vh;
+    height: 82vh;
     text-align: left;
     vertical-align: middle;
 }
