--- a/merch.css
+++ b/merch.css
@@ -13,6 +13,14 @@ body {
     justify-content: center;
 }
 
+.topbar {
+    width: 100vw;
+    height: 18vh;
+    background-color: #352d29;
+    display: flex;
+    align-items: center;
+}
+
 .grid {
     padding-top: 10vh;
     padding-bottom: 10vh;
