--- a/song.css
+++ b/song.css
@@ -11,14 +11,31 @@ body {
     text-decoration: none;
 }
 
+.topbar {
+    width: 100vw;
+    height: 18vh;
+    background-color: #352d29;
+    display: flex;
+    align-items: center;
+}
+
 .translate-buttons {
     padding-bottom: 2vh;
 }
 
+.mp-image {
+    width: 15vw;
+    margin-top: 2vh;
+}
+
+.mp-button {
+ margin-top: 1vh;
+}
+
 .piano {
     width: 100%;
-    height: 40vh;
-    padding-top: 10vh;
+    height: 32vh;
+    padding-top: 6vh;
 }
 
 .key {
