--- a/song.css
+++ b/song.css
@@ -66,13 +66,12 @@ body {
     animation-play-state: running;
 }
 
-
 .mp-button {
     position: relative;
 }
 
 .piano {
-    width: 100%;
+    width: 42vw;
     height: 32vh;
     padding-top: 6vh;
 }
